<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.praveen.safescore.MainActivity">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeToRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="28dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical">

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/welcome" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/welcome"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:id="@+id/main_welcome"
                android:textColor="#000000"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:id="@+id/main_away"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:textColor="@color/colorAccent"
                android:text="@string/away_from_home_by_x_kms"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:paddingEnd="8dp"
                    android:textAlignment="textEnd"
                    android:text="@string/current_time"
                    android:layout_weight="1"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="0dp"
                    android:paddingStart="8dp"
                    android:id="@+id/main_time"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_weight="1"
                    android:text="@string/time"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:paddingEnd="8dp"
                    android:textAlignment="textEnd"
                    android:text="@string/current_location"
                    android:layout_weight="1"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="0dp"
                    android:paddingStart="8dp"
                    android:id="@+id/main_location"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_weight="1"
                    android:text="@string/lat_long"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:paddingEnd="8dp"
                    android:textAlignment="textEnd"
                    android:text="@string/threat_nearby"
                    android:layout_weight="1"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="0dp"
                    android:paddingStart="8dp"
                    android:id="@+id/main_threat"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_weight="1"
                    android:text="@string/loading"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:paddingEnd="8dp"
                    android:textAlignment="textEnd"
                    android:text="@string/is_police_near"
                    android:layout_weight="1"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="0dp"
                    android:paddingStart="8dp"
                    android:id="@+id/main_police"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_weight="1"
                    android:text="@string/loading"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/scraem"
            android:text="@string/tap_twice_to_scream_out_loud"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/colorAccent"
            android:layout_weight="1"/>

    </LinearLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>
